@@ -380,7 +380,7 @@ WHERE c.object_id = " . q($table_id)) as $row
 				"null" => $row["is_nullable"],
 				"auto_increment" => $row["is_identity"],
 				"collation" => $row["collation_name"],
-				"privileges" => array("insert" => 1, "select" => 1, "update" => 1),
+				"privileges" => array("insert" => 1, "select" => 1, "update" => 1, "where" => 1),
 				"primary" => $row["is_primary_key"],
 				"comment" => $comments[$row["name"]],
 			);
