@@ -1,12 +1,14 @@
 Adminer dev:
 PostgreSQL: Fix setting NULL and original value on enum (bug #884)
 CockroachDB: Add support via PostgreSQL driver
+Elasticsearch: Add support for "where" field privilege
 
 Adminer 5.0.1 (released 2025-03-07):
 Fix bulk operations with tables (regression from 5.0.0)
 Remove duplicate columns from select (bug #670)
 MariaDB: Fix link to status variable doc (bug #658)
 PostgreSQL: Support indexes on materialized views (PR #467)
+Elasticsearch: Drop support for version < 7
 
 Adminer 5.0.0 (released 2025-03-07):
 Speed up with disabled output buffering
